# rescue.dogs

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routers/: rescue_dog.py
backend/app/schemas/: rescue_dog.py
backend/app/schemas/reference/: dog_breeds.py
frontend/dog-form/: package-lock.json  package.json
frontend/dog-form/public/: index.html
frontend/dog-form/src/: App.js  Create.js  DogDetails.js  DogList.js  Home.js  Navbar.js  NotFound.js  useFetch.js
