[tool.poetry]
name = "rescue-dog"
version = "0.1.0"
description = "Back end for rescue dogs"
authors = ["RICHARD GRIFFITHS <griff182uk@yahoo.co.uk>"]
readme = "README.md"
packages = [{include = "rescue_dog"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
jsf = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:main"
